--- a/moneyclub/templates/moneyclub/group_home_page.html
+++ b/moneyclub/templates/moneyclub/group_home_page.html
@@ -252,7 +252,7 @@
                 <p class="pull-right"><span class="glyphicon glyphicon-time"></span> Posted on {{post.datetime}}</p>
               </div><!--/media-->
               </div> <!--./row-->
-            {% for post in posts %}
+            {% for post in articles %}
               <div class="row"> 
                 <div class="media">
                   <a class="pull-left" href="#">
