--- a/moneyclub/templates/moneyclub/login_template.html
+++ b/moneyclub/templates/moneyclub/login_template.html
@@ -25,12 +25,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="newsfeed.html">Moneyclub</a>
+          <a class="navbar-brand" href="/newsfeed/">Moneyclub</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="/moneyclub/groups/member-management/1">My Money Clubs</a></li>
             <li><a href="/moneyclub/member/profile">Profile</a></li>
           </ul>
           <ul  class="nav navbar-nav navbar-right">
@@ -53,12 +53,12 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-cog"></span> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="/moneyclub/member/reset-password">Reset Password</a></li>
-                  <li><a href="#">Another action</a></li>
+                  
                   <li><a href="#">Something else here</a></li>
                   <li class="divider"></li>
-                  <li class="dropdown-header">Nav header</li>
+                  
                   <li><a href="/moneyclub/groups/club_create">Create a Group</a></li>
-                  <li><a href="#">One more separated link</a></li>
+                  
                 </ul>
               </li>
               {% endblock nav_settings %}
