--- a/moneyclub/templates/moneyclub/group_home_page.html
+++ b/moneyclub/templates/moneyclub/group_home_page.html
@@ -12,6 +12,7 @@
     <script src="/static/js/group_stock.js"></script>
     <script src="/static/js/edit_group_stock.js"></script>
     <script src="/static/js/post.js"></script>
+    <script src="/static/js/animate.js"></script>
     <script src="/static/js/jquery.form.js"type="text/javascript" ></script>
   {% endblock headblock %}
 
@@ -40,9 +41,25 @@
                           {% for keyword in keywords %}     
                           <span class="label label-default">{{keyword}}</span>
                           {% endfor %}
-                          <p>
-                             <a href="/moneyclub/groups/join_group/{{group.id}}/" class="btn btn-primary "> Join</a>
-                          </p>
+                          <hr style="margin:4px auto">
+                        <div class="container ">
+                          <div class="row">
+                          <div class="col-md-4">
+                              <div class="list-group">
+                                  <a  class="list-group-item visitor">
+                                      <h3 class="pull-right">
+                                          <span class="glyphicon glyphicon-usd"></span>
+                                    </h3>
+                                      <h4 class="list-group-item-heading count">{{score}}</h4>
+                                      <p class="list-group-item-text">
+                                          Total Points</p>
+                                  </a>
+                              </div>
+                          </div>
+ 
+                        </div>
+                      </div> <!-- /.container -->
+                          
 
                       </div>
                   </div>
@@ -55,9 +72,13 @@
           {% endblock jumbotron %}
           {% block post%}
            <div class="container">  
+            {% if is_member %}
             <button class="btn btn-warning btn-lg pull-right" data-toggle="modal" data-target="#myModal">
               New Post
             </button>
+            {% else %}
+            <a href="/moneyclub/groups/join_group/{{group.id}}/" class="btn btn-primary pull-right"> Join</a>
+            {% endif %}
             <script>
                {% if errors %}
                     console.log(errors)
@@ -269,18 +290,12 @@
                 <div class="media-body">
                   
                   <h4 class="media-heading"><a href="#">{{post.title}}</a></h4>
-                  {% if post.articleType == 0 %}
+                  {% if post.articleType == 1 %}
                   <!-- text post -->
                   <span class="label label-info">Article</span>
                   {{post.content|truncatechars:100}}...
                   {% endif%}
-                   {% if post.articleType == 1 %}
-                  <!-- link post -->
-                  <span class="label label-info">Link</span>
-                  <a href="{{post.content}}">
-                    {{post.content}}
-                  </a>
-                  {% endif%}
+                   
                    {% if post.articleType == 2 %}
                   <!-- image post -->
                   <span class="label label-info">Image</span>
@@ -379,21 +394,15 @@
           </div><!--/.well -->
         <div class="well sidebar-nav">
           <ul class="nav">
-            <li>Events</li>
-            <li class="active"><a href="#"><span class="glyphicon glyphicon-calendar"></span>US-EU summit</a></li>
-            
-            
-          </ul>
+              <li>Events</li>
+              {% for event in events %}
+                <li><a href="/moneyclub/groups/article/{{event.id}}"><span class="glyphicon glyphicon-calendar"></span>{{event.title}}</a></li>
+              {% endfor %}
+              
+              
+            </ul>
         </div><!--/.well -->
-        <div class="well sidebar-nav">
-          <ul class="nav">
-            <li>Apps</li>
-            <li class="active"><a href="#">Sharing</a></li>
-            <li><a href="#">Messages</a></li>
-            <li><a href="#">Inviting friends</a></li>
-            
-          </ul>
-        </div><!--/.well -->
+        
         
         {% endblock sidebars %}
      
