search page upgraded

--- a/moneyclub/templates/moneyclub/group_home_page.html
+++ b/moneyclub/templates/moneyclub/group_home_page.html
@@ -233,7 +233,7 @@
           <div class="container">
             <div class="row"> 
                 <div class="media">
-                  <a class="pull-left" href="#">
+                  <a class="pull-left" href="#" doubt="">
                     <div class="thumbnail" style="padding: 0">
                       <div style="padding:4px">
                         <img class="media-object" src="" alt="..."width="100px">
@@ -289,7 +289,7 @@
                   </a>
                 <div class="media-body">
                   
-                  <h4 class="media-heading"><a href="#">{{post.title}}</a></h4>
+                  <h4 class="media-heading"><a href="/moneyclub/groups/article/{{post.id}}">{{post.title}}</a></h4>
                   {% if post.articleType == 1 %}
                   <!-- text post -->
                   <span class="label label-info">Article</span>
