--- a/moneyclub/templates/moneyclub/login_template.html
+++ b/moneyclub/templates/moneyclub/login_template.html
@@ -4,7 +4,7 @@
 
     <!-- title and scripts -->
     {% block title %}
-    <title>Off Canvas Template for Bootstrap</title>
+    <title>Money club</title>
     {% endblock title %}
     <!-- Bootstrap core CSS -->
     <link href="/static/dist/css/bootstrap.min.css" rel="stylesheet">
