--- a/moneyclub/templates/moneyclub/member_management.html
+++ b/moneyclub/templates/moneyclub/member_management.html
@@ -20,10 +20,59 @@
       <br><br>
 <div class="container">
  <div class="well col-sm-12 col-md-8 col-md-offset-2">
-        <div class="row user-row">
+ 
+ 
+    <div class="row user-row">
             
             <div class="col-md-5">
-                <h4><span class="glyphicon glyphicon-plus-sign"  style="color:green;"></span> Add Members to Money Club</h4>
+                <h4><span class="glyphicon glyphicon-search" style="color:blue;"></span> View Clubs I have joined</h4>
+            </div>
+            <div class="col-md-1 dropdown-user pull-right" data-for=".alexanderMahrt">
+                <i class="glyphicon glyphicon-chevron-down text-muted"></i>
+            </div>
+        </div>
+        <div class="row user-infos alexanderMahrt">
+            <div class="col-sm-10 col-md-10 col-md-offset-1">
+                <div class="panel panel-primary">
+                    
+                    
+                    <div class="panel-body">
+                        <div class="container">
+                         
+                                        
+                        Select a group you own:<br/>
+                        
+                         {%for item in joined_groups%}<p style="font-size:175%; color:white"> 
+                          <span class="btn btn-default glyphicon glyphicon-pushpin">
+                          <a href="/moneyclub/groups/home/{{item.id}}" >{{item.group}}</a>
+                          </span>
+                          {%endfor%}
+                         
+                        
+                          
+                            
+                            
+                          
+
+                        
+                        
+                    </div> <!--/.container-->
+                    </div>
+              
+                </div>
+            </div>
+        </div>
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+        <div class="row user-row">
+            
+            <div class="col-md-7">
+                <h4><span class="glyphicon glyphicon-plus-sign"  style="color:green;"></span> Add Members to my Money Clubs</h4>
             </div>
             <div class="col-md-1 dropdown-user pull-right   " data-for=".cyruxx">
                 <i class="glyphicon glyphicon-chevron-down text-muted"></i>
@@ -65,8 +114,8 @@
 
         <div class="row user-row">
             
-            <div class="col-md-5">
-                <h4><span class="glyphicon glyphicon-search" style="color:blue;"></span> View Club Members</h4>
+            <div class="col-md-7">
+                <h4><span class="glyphicon glyphicon-search" style="color:blue;"></span>View Members of my Money Clubs</h4>
             </div>
             <div class="col-md-1 dropdown-user pull-right" data-for=".alexanderMahrt">
                 <i class="glyphicon glyphicon-chevron-down text-muted"></i>
