Dashboard created and feedback provided

--- a/moneyclub/templates/moneyclub - backup before newsfeed conflict/login_template.html
+++ b/moneyclub/templates/moneyclub - backup before newsfeed conflict/login_template.html
@@ -25,14 +25,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/newsfeed/">Newfeed</a>
+          <a class="navbar-brand" href="/newsfeed/">Moneyclub</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/moneyclub/groups/member-management/1">Dashboard</a></li>
-            
-            <li class=""><a href="/">My Articles</a></li>
-            
+            <li class="active"><a href="/">Home</a></li>
+            <li><a href="/moneyclub/groups/member-management/1">My Money Clubs</a></li>
             <li><a href="/moneyclub/member/profile">Profile</a></li>
           </ul>
           <ul  class="nav navbar-nav navbar-right">
