--- a/moneyclub/templates/moneyclub/member_management.html
+++ b/moneyclub/templates/moneyclub/member_management.html
@@ -1,198 +1,227 @@
-{% extends "moneyclub/login_template.html" %}
+{% extends "moneyclub/login_template.html" %} {% block headblock %}
 
-  {% block headblock %}
+<!-- title and scripts -->
+{% block title %}
+<title>All your clubs in one place</title>
+{% endblock title %}
+<!-- Bootstrap core CSS -->
+<link href="/static/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- title and scripts -->
-    {% block title %}
-    <title>Off Canvas Template for Bootstrap</title>
-    {% endblock title %}
-    <!-- Bootstrap core CSS -->
-    <link href="/static/dist/css/bootstrap.min.css" rel="stylesheet">
+<!-- Custom styles for this template -->
+<link href="/static/css/offcanvas.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="/static/css/offcanvas.css" rel="stylesheet">
-    
-    <script src="/static/js/jquery-1.10.2.min.js"></script>
-  
-  {% endblock headblock %}
+<script src="/static/js/jquery-1.10.2.min.js"></script>
 
-  {% block contentsblock %}
-      <br><br>
+{% endblock headblock %} {% block contentsblock %}
+<br>
+<br>
 <div class="container">
- <div class="well col-sm-12 col-md-8 col-md-offset-2">
- 
- 
-    <div class="row user-row">
-            
-            <div class="col-md-5">
-                <h4><span class="glyphicon glyphicon-search" style="color:blue;"></span> View Clubs I have joined</h4>
-            </div>
-            <div class="col-md-1 dropdown-user pull-right" data-for=".alexanderMahrt">
-                <i class="glyphicon glyphicon-chevron-down text-muted"></i>
-            </div>
-        </div>
-        <div class="row user-infos alexanderMahrt">
-            <div class="col-sm-10 col-md-10 col-md-offset-1">
-                <div class="panel panel-primary">
-                    
-                    
-                    <div class="panel-body">
-                        <div class="container">
-                         
-                                        
-                        Select a group you own:<br/>
-                        
-                         {%for item in joined_groups%}<p style="font-size:175%; color:white"> 
-                          <span class="btn btn-default glyphicon glyphicon-pushpin">
-                          <a href="/moneyclub/groups/home/{{item.id}}" >{{item.group}}</a>
-                          </span>
-                          {%endfor%}
-                         
-                        
-                          
-                            
-                            
-                          
-
-                        
-                        
-                    </div> <!--/.container-->
-                    </div>
-              
-                </div>
-            </div>
-        </div>
- 
- 
- 
- 
- 
- 
- 
-        <div class="row user-row">
-            
-            <div class="col-md-7">
-                <h4><span class="glyphicon glyphicon-plus-sign"  style="color:green;"></span> Add Members to my Money Clubs</h4>
-            </div>
-            <div class="col-md-1 dropdown-user pull-right   " data-for=".cyruxx">
-                <i class="glyphicon glyphicon-chevron-down text-muted"></i>
-            </div>
-        </div>
-        <div class="row user-infos cyruxx">
-            <div class="col-sm-10 col-md-10 col-md-offset-1">
-                <div class="panel panel-primary">
-                    
-                    <div class="panel-body">
-                        <div class="container">
-                            <div class="row">
-                                <form class="form-signin" action="/moneyclub/groups/add_members/" method="post" >
-                                <div class="col-md-6 ">
-                                   
-                                        <input type="text" class="form-control" placeholder="Email of new user" required autofocus name="email" >
-                                        Select a group you own:
-                                        <select name="select_group">
-                                        {%for item in groups%}
-                                            <option value="{{item.name}}">{{item.name}}</option>
-                                        {%endfor%}
-                         
-                                        </select>
-                                        
-                                </div>
-                                <div class="col-md-3 pull-right">
-                                    <button class="btn btn-lg btn-success btn-block" type="submit">Add User!</button>
-                                </div>
-                            {%csrf_token%}
-                            </form>
-                            </div>
-                        </div>
-                    </div>
-                    
-                </div>
-            </div>
-        </div>
+	<div class="well col-sm-12 col-md-8 col-md-offset-2">
 
 
-        <div class="row user-row">
-            
-            <div class="col-md-7">
-                <h4><span class="glyphicon glyphicon-search" style="color:blue;"></span>View Members of my Money Clubs</h4>
-            </div>
-            <div class="col-md-1 dropdown-user pull-right" data-for=".alexanderMahrt">
-                <i class="glyphicon glyphicon-chevron-down text-muted"></i>
-            </div>
-        </div>
-        <div class="row user-infos alexanderMahrt">
-            <div class="col-sm-10 col-md-10 col-md-offset-1">
-                <div class="panel panel-primary">
-                    
-                    
-                    <div class="panel-body">
-                        <div class="container">
-                         <form class="form-signin" action="/moneyclub/groups/view_group_members2/" method="post" >
-                                        
-                        Select a group you own:
-                        <select name="select_group">
-                         {%for item in groups%}
-                          <option value="{{item.name}}">{{item.name}}</option>
-                          {%endfor%}
-                         
-                        </select>
-                          <button class="btn btn-primary btn-primary" type="submit">
-                            <span class="glyphicon glyphicon-pushpin"></span>
-                            Get Members
-                          </button>
+		<div class="row user-row">
 
-                        {%csrf_token%}
-                        </form>
-                    </div> <!--/.container-->
-                    </div>
-              
-                </div>
-            </div>
-        </div>
+			<div class="col-md-5">
+				<h4>
+					<span class="glyphicon glyphicon-search" style="color: blue;"></span>
+					View Clubs I have joined
+				</h4>
+			</div>
+			<div class="col-md-1 dropdown-user pull-right"
+				data-for=".alexanderMahrt">
+				<i class="glyphicon glyphicon-chevron-down text-muted"></i>
+			</div>
+		</div>
+		<div class="row user-infos alexanderMahrt">
+			<div class="col-sm-10 col-md-10 col-md-offset-1">
+				<div class="panel panel-primary">
 
 
-        <div class="row user-row">
- 
-            <div class="col-md-5">
-                <h4 ><span class="glyphicon glyphicon-minus-sign" style="color:red;"></span> Block Club Members</h4>
-            </div>
-            <div class="col-md-1 dropdown-user pull-right" data-for=".myUsername">
-                <i class="glyphicon glyphicon-chevron-down text-muted"></i>
-            </div>
-        </div>
-        <div class="row user-infos myUsername">
-            <div class="col-sm-10 col-md-10 col-md-offset-1">
-                <div class="panel panel-primary">
-                   <div class="panel-body">
-                                                <div class="container">
-                         <form class="form-signin" action="/moneyclub/groups/view_group_members2/" method="post" >
-                                        
-                        Select a group you own:
-                        <select name="select_group">
-                         {%for item in groups%}
-                          <option value="{{item.name}}">{{item.name}}</option>
-                          {%endfor%}
-                         
-                        </select>
-                          <button class="btn btn-danger" type="submit">
-                            <span class="glyphicon glyphicon-pushpin"></span>
-                            Block Members
-                          </button>
+					<div class="panel-body">
+						<div class="container">
 
-                        {%csrf_token%}
-                        </form>
-                    </div> <!--/.container-->
-                    </div>
-                    
-                </div>
-            </div>
-        </div>
-    </div>
+
+							{%if joined_groups|length != 0%}
+							Select a group you own:<br /> 
+							{%for item in joined_groups%}
+							<p style="font-size: 175%; color: white">
+								<span class="btn btn-default glyphicon glyphicon-pushpin">
+									<a href="/moneyclub/groups/home/{{item.id}}">{{item.group}}</a>
+								</span> {%endfor%} {%else%} You have not joined any Money Clubs. <a
+									href="/moneyclub/groups/findgroups/">Find Money Clubs!</a>
+
+								{%endif%}
+						</div>
+						<!--/.container-->
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+
+
+
+
+
+
+		<div class="row user-row">
+
+			<div class="col-md-7">
+				<h4>
+					<span class="glyphicon glyphicon-plus-sign" style="color: green;"></span>
+					Add Members to Clubs I own
+				</h4>
+			</div>
+			<div class="col-md-1 dropdown-user pull-right   " data-for=".cyruxx">
+				<i class="glyphicon glyphicon-chevron-down text-muted"></i>
+			</div>
+		</div>
+		<div class="row user-infos cyruxx">
+			<div class="col-sm-10 col-md-10 col-md-offset-1">
+				<div class="panel panel-primary">
+
+					<div class="panel-body">
+						<div class="container">
+							<div class="row">
+
+						{%if groups|length != 0%}
+				
+								<form class="form-signin"
+									action="/moneyclub/groups/add_members/" method="post">
+									<div class="col-md-6 ">
+
+										<input type="text" class="form-control"
+											placeholder="Email of new user" required autofocus
+											name="email"> Select a group you own: <select
+											name="select_group"> {%for item in groups%}
+											<option value="{{item.name}}">{{item.name}}</option>
+											{%endfor%}
+
+										</select>
+
+									</div>
+									<div class="col-md-3 pull-right">
+										<button class="btn btn-lg btn-success btn-block" type="submit">Add
+											User!</button>
+									</div>
+									{%csrf_token%}
+								</form>
+								
+						{%else%}
+								You donot own any Money Clubs. <a href="/moneyclub/groups/club_create">Create a money club!</a>
+						
+						{%endif%}		
+						
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+
+		<div class="row user-row">
+
+			<div class="col-md-7">
+				<h4>
+					<span class="glyphicon glyphicon-search" style="color: blue;"></span>View
+					Members of Clubs I own
+				</h4>
+			</div>
+			<div class="col-md-1 dropdown-user pull-right"
+				data-for=".amey">
+				<i class="glyphicon glyphicon-chevron-down text-muted"></i>
+			</div>
+		</div>
+		<div class="row user-infos amey">
+			<div class="col-sm-10 col-md-10 col-md-offset-1">
+				<div class="panel panel-primary">
+
+
+					<div class="panel-body">
+						<div class="container">
+						
+						
+						{%if groups|length != 0%}
+							<form class="form-signin"
+								action="/moneyclub/groups/view_group_members2/" method="post">
+
+								Select a group you own: <select name="select_group">
+									{%for item in groups%}
+									<option value="{{item.name}}">{{item.name}}</option> {%endfor%}
+
+								</select>
+								<button class="btn btn-primary btn-primary" type="submit">
+									<span class="glyphicon glyphicon-pushpin"></span> Get Members
+								</button>
+
+								{%csrf_token%}
+							</form>
+							
+							{%else%}
+								You donot own any Money Clubs. <a href="/moneyclub/groups/club_create">Create a money club!</a>
+						
+						{%endif%}		
+						</div>
+						<!--/.container-->
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+
+		<div class="row user-row">
+
+			<div class="col-md-5">
+				<h4>
+					<span class="glyphicon glyphicon-minus-sign" style="color: red;"></span>
+					Block members of Clubs I own
+				</h4>
+			</div>
+			<div class="col-md-1 dropdown-user pull-right" data-for=".myUsername">
+				<i class="glyphicon glyphicon-chevron-down text-muted"></i>
+			</div>
+		</div>
+		<div class="row user-infos myUsername">
+			<div class="col-sm-10 col-md-10 col-md-offset-1">
+				<div class="panel panel-primary">
+					<div class="panel-body">
+						<div class="container">
+						
+						{%if groups|length != 0%}
+							<form class="form-signin"
+								action="/moneyclub/groups/view_group_members2/" method="post">
+
+								Select a group you own: <select name="select_group">
+									{%for item in groups%}
+									<option value="{{item.name}}">{{item.name}}</option> {%endfor%}
+
+								</select>
+								<button class="btn btn-danger" type="submit">
+									<span class="glyphicon glyphicon-pushpin"></span> Block Members
+								</button>
+
+								{%csrf_token%}
+							</form>
+						{%else%}
+								You donot own any Money Clubs. <a href="/moneyclub/groups/club_create">Create a money club!</a>
+						
+						{%endif%}	
+						</div>
+						<!--/.container-->
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 
-    
 
-    
-     
- {% endblock contentsblock %}
+
+
+
+{% endblock contentsblock %}
