dashboard create money club

--- a/moneyclub/templates/moneyclub/member_management.html
+++ b/moneyclub/templates/moneyclub/member_management.html
@@ -23,8 +23,8 @@
 
 			<div class="col-md-5">
 				<h4>
-					<span class="glyphicon glyphicon-search" style="color: blue;"></span>
-					View Clubs I have joined
+					<span class="glyphicon glyphicon-flag" style="color: green;"></span>
+					Create a Money Club
 				</h4>
 			</div>
 			<div class="col-md-1 dropdown-user pull-right"
@@ -33,6 +33,39 @@
 			</div>
 		</div>
 		<div class="row user-infos alexanderMahrt">
+			<div class="col-sm-10 col-md-10 col-md-offset-1">
+				<div class="panel panel-primary">
+
+
+					<div class="panel-body">
+						<div class="container">
+
+
+						<a href="/moneyclub/groups/club_create/">Create a new Money Club</a>
+						</div>
+						<!--/.container-->
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+
+
+<div class="row user-row">
+
+			<div class="col-md-5">
+				<h4>
+					<span class="glyphicon glyphicon-info-sign" style="color: grey;"></span>
+					View Clubs I have joined
+				</h4>
+			</div>
+			<div class="col-md-1 dropdown-user pull-right"
+				data-for=".amey2">
+				<i class="glyphicon glyphicon-chevron-down text-muted"></i>
+			</div>
+		</div>
+		<div class="row user-infos amey2">
 			<div class="col-sm-10 col-md-10 col-md-offset-1">
 				<div class="panel panel-primary">
 
@@ -61,15 +94,11 @@
 
 
 
-
-
-
-
 		<div class="row user-row">
 
 			<div class="col-md-7">
 				<h4>
-					<span class="glyphicon glyphicon-plus-sign" style="color: green;"></span>
+					<span class="glyphicon glyphicon-plus-sign" style="color: purple;"></span>
 					Add Members to Clubs I own
 				</h4>
 			</div>
