--- a/moneyclub/templates/moneyclub/newsfeed.html
+++ b/moneyclub/templates/moneyclub/newsfeed.html
@@ -7,8 +7,7 @@
     
           {% block articles %}
    {%if not articles%}
-   <h4 class="media-heading">You have not joined any Money Clubs. <a href="/moneyclub/groups/findgroups/">
-   Join a Money Club </a> to gain access to information and make your investments smarter!</h4>
+   <h4 class="media-heading">Sorry, no recent news from your joined Money Clubs.</h4>
    {%endif%}
    
    <ol>
