--- a/moneyclub/templates/moneyclub/adduser_success.html
+++ b/moneyclub/templates/moneyclub/adduser_success.html
@@ -16,7 +16,11 @@
     <div class="container">
 
       <form class="form-signin"><br/><br/><br/><br/><br/><br/>
-        <h2 class="form-signin-heading"><div class="btn btn-block btn-lg btn-success"><span class="glyphicon glyphicon-ok"></span> User Invited Successfully!</div></h2>
+        <h2 class="form-signin-heading"><div class="btn btn-block btn-lg btn-success">
+        <span class="glyphicon glyphicon-ok">
+        </span> 
+        
+        User Invited Successfully!</div></h2>
         
       </form>
 
