--- a/moneyclub/templates/moneyclub/login_template.html
+++ b/moneyclub/templates/moneyclub/login_template.html
@@ -29,7 +29,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/moneyclub/groups/member-management/1">Dashboard</a></li>
+            <li><a href="/moneyclub/groups/member-management/1">My Groups Dashboard</a></li>
             
             <li class=""><a href="/">My Articles</a></li>
             
