Fix: Article UI. Left: Event UI.

--- a/moneyclub/templates/moneyclub/login_template.html
+++ b/moneyclub/templates/moneyclub/login_template.html
@@ -25,11 +25,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/newsfeed/">Newfeed</a>
+          <a class="navbar-brand" href="/newsfeed/">Newsfeed</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/moneyclub/groups/member-management/1">My Groups Dashboard</a></li>
+            <li><a href="/moneyclub/groups/member-management/1">Groups-Dashboard</a></li>
             
             <li class=""><a href="/">My Articles</a></li>
             
