--- a/moneyclub/templates/moneyclub/article.html
+++ b/moneyclub/templates/moneyclub/article.html
@@ -18,7 +18,7 @@
     <div class="container">
 
       <div class="row ">
-        <div class="col-lg-8">
+        <div class="col-lg-12">
           <div class="article">
             <h1>Title: {{article.title}}</h1>
             <p class="lead">by <a href="/moneyclub/member/profile/{{user.id}}/">{{article.user}}</a></p>
@@ -27,7 +27,8 @@
             <hr>
               <div class="media">
               {%if article.picture%}
-                  <div class="pull-left" >
+              
+                  <div class="pull-right" >
                     <img class="media-object" 
                     style="max-width:600px;"
                     
@@ -41,24 +42,23 @@
                {%endif%}
             
             
-
+ 		<div class="col-lg-4">
             <div class="media-body">
             
-            <p class="lead">Description:{{article.description}}</p>
+            <p class="lead">Description:<br/>{{article.content}}</p>
             	                        
             </div>
+        </div>
             
             </div>
             <p><span class="glyphicon glyphicon-time"></span> Post at {{article.datetime}}</p>
             
 
             {% if  article.articleType == 1 %}
-            <span class="label label-info">Article</span>
+            
 
-            {% if article.picture %}
-              <img class="media-object" src="/moneyclub/groups/post_article/{{article.id}}" alt="..."width="400px">
-            {% endif %}
-            <p class="lead">{{article.content}}</p>
+
+            
 
             {% endif %}
             
@@ -145,13 +145,7 @@
            <div class="row">
               <div class="col-lg-9 col-lg-offset-1">
                 <div class="media">
-                  <a class="pull-left" href="{% url 'visit_user' comm.commentBy.id%}">
-                    
-                      <div style="padding:4px">
-                        <img class="media-object" src="{% url 'user-photo' comm.commentBy.id %}" alt="..."width="100px">
-                      </div>
-                      
-                  </a>
+                  
                   <div class="media-body">
                     <h4 class="media-heading"><a href="{% url 'visit_user' comm.commentBy.id%}">{{comm.commentBy}}</a> said:</h4>
                     <p style="font-size:150%"> {{comm.comment}}</p>
