--- a/moneyclub/templates/moneyclub/visitpage.html
+++ b/moneyclub/templates/moneyclub/visitpage.html
@@ -1,21 +1,10 @@
-{% extends "moneyclub/login_template.html" %}
+{% extends "moneyclub/index.html" %}
   
-    {% block headblock %}
+
     {% block title %}
     <title>{{visitee}}'s Homepage</title>
     {% endblock title %}
-    <link href="/static/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="/static/css/offcanvas.css" rel="stylesheet">
-    <link href="/static/css/bootstrap-datetimepicker.css" rel="stylesheet">
-    <script src="/static/js/jquery-1.10.2.min.js"></script>
-    <script src="/static/js/stock.js"></script>
-    <script src="/static/js/edit_stock.js"></script>
-
-  {% endblock headblock %}
-
-  
   
     
 
@@ -32,7 +21,7 @@
 
               <div class="col-lg-12">
                   <div class="media">
-                  {%if no_pic %}
+                  {%if not profile.profilepicture %}
                   
                   <a class="pull-left" href="/moneyclub/member/profile">
                           <img class="media-object dp img-circle" src="/static/image/money.jpg" 
@@ -169,7 +158,7 @@
         
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="siderbars" role="navigation">
           {% block sidebars %}
-          <div class="well sidebar-nav stock" id="{{visitee.id}}">
+          <div class="well sidebar-nav stock" id="{{user.id}}">
             <ul class="nav">
              
               <table class="table table-striped table-condensed">
@@ -215,9 +204,9 @@
               </li>
               <font style="color:grey">
               {%if no_groups %} 
-                You are not enrolled in any Money Clubs.
-                <br/>
-        <a href="/moneyclub/groups/findgroups/">Find Money Clubs!</a>              
+              	You are not enrolled in any Money Clubs.
+              	<br/>
+				<a href="/moneyclub/groups/findgroups/">Find Money Clubs!</a>              
               {%else%}
                
               {% for group in groups%}
@@ -232,18 +221,13 @@
           <div class="well sidebar-nav">
             <ul class="nav">
               <li>Events</li>
-              <li class="active"><a href="#"><span class="glyphicon glyphicon-calendar"></span>Tea Party with Duck Billionare Club</a></li>
-              <li><a href="#"><span class="glyphicon glyphicon-calendar"></span>Polishing Gold Coins</a></li>
-              <li><a href="#"><span class="glyphicon glyphicon-calendar"></span>Visiting the President</a></li>
-              
-            </ul>
-          </div><!--/.well -->
-          <div class="well sidebar-nav">
-            <ul class="nav">
-              <li>Apps</li>
-              <li class="active"><a href="#">Sharing</a></li>
-              <li><a href="#">Messages</a></li>
-              <li><a href="#">Inviting friends</a></li>
+             {%if events%}
+              {% for event in events %}
+                <li><a href="/moneyclub/groups/article/{{event.id}}"><span class="glyphicon glyphicon-calendar"></span>{{event.title}}</a></li>
+              {% endfor %}
+              {%else%}
+              <li>No scheduled events.</li>
+              {%endif%}
               
             </ul>
           </div><!--/.well -->
