--- a/moneyclub/templates/moneyclub/newsfeed.html
+++ b/moneyclub/templates/moneyclub/newsfeed.html
@@ -13,35 +13,46 @@
    <ol>
    {%for article in articles%}
    
-   {%if article.article%}
-         <li><h4 class="media-heading">Article : <a href="/moneyclub/groups/article/{{article.id}}">{{article.title}}</a></h4>
-          <div class="row">
+   {%if article.articleType == 1 %}
+         <li> <h4 class="media-heading">Title: <a href="/moneyclub/groups/article/{{article.id}}">{{article.title}}</a></h4>
+         <div class="row">
             
               <div class="media">
-                  
+              {%if article.picture%}
+                  <a class="pull-left" href="#">
+                    <img class="media-object" 
+                    
+                    
+                    src="/moneyclub/groups/get_photo_article/{{article.id}}" 
+                    
+                    
+                    alt="Image Not Found!" width="100px">
+                  </a>
+               
+               
+               {%endif%}
+               
+               
                 <div class="media-body">
-				<span class="label label-info">Article</span>
-                  by <a href="/moneyclub/member/visit-user/{{article.user.id}}/">{{article.user}}</a>
+                  
+                  <span class="label label-info">Article content:</span>
                   
                   <br/>
-                  
-                  
-                  {%if article.content%}
-                  <span class="label label-info">Article Description</span>
                   {{article.content}}
-                  {%endif%}
-                </div>
-                
-                <p class="pull-right"><span class="glyphicon glyphicon-time"></span> Posted on {{article.datetime}}</p>
+                                    
+                </div><br/>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on {{article.datetime}}</p>
               </div><!--/media-->
             
             
           </div><!--/row-->
+          
+          <hr/>
           </li>
           <hr/>
          
          
-    {% else %}
+    {% elif article.articleType == 2 %}
     <li><h4 class="media-heading">Event : <a href="/moneyclub/groups/article/{{article.id}}">{{article.title}}</a></h4>
           <div class="row">
             
@@ -56,21 +67,21 @@
                   
                   <tbody>
                           <tr>
-                            <td><a href="#">Date</a></td>
-                            <td>{{article.eventDate}}{{article.eventTime}}, {{article.eventDate}}</td>
+                            <td><a href="/moneyclub/groups/article/{{article.id}}">Date</a></td>
+                            <td>{{article.eventDate}} {{article.eventTime}}, {{article.eventDate}}</td>
                             
                           </tr>
                   </tbody>
                   <tbody>
                           <tr>
-                            <td><a href="#">Time</a></td>
+                            <td><a href="/moneyclub/groups/article/{{article.id}}">Time</a></td>
                             <td>{{article.eventTime}}</td>
                             
                           </tr>
                   </tbody>
                   <tbody>
                           <tr>
-                            <td><a href="#">Location</a></td>
+                            <td><a href="/moneyclub/groups/article/{{article.id}}">Location</a></td>
                             <td>Uncle Scoorge's Castle</td>
                             
                           </tr>
