In Progress: Templates on confirm registration

--- a/moneyclub/templates/moneyclub/login_template.html
+++ b/moneyclub/templates/moneyclub/login_template.html
@@ -81,9 +81,13 @@
      
     {% endblock contentsblock %}
     {%block footer%}
-     <footer>
-        <p>&copy; Company 2013</p>
+      <hr/>
+       <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p>&copy; 2013, Money Club  | CMU | <a href="#">Terms</a></p>
       </footer>
+      
+      
     {%endblock footer%}
     <!-- Bootstrap core JavaScript
     ================================================== -->
