--- a/moneyclub/templates/moneyclub/non_login_template.html
+++ b/moneyclub/templates/moneyclub/non_login_template.html
@@ -68,6 +68,12 @@
     {% endblock contentsblock %}
 
     {% block footerblock %}
+    <hr/>
+    <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p>&copy; 2013, Money Club  | CMU | <a href="#">Terms</a></p>
+      </footer>
+    
     {% endblock footerblock %}
 
     {% block endscript %}
