--- a/moneyclub/templates/moneyclub/profile.html
+++ b/moneyclub/templates/moneyclub/profile.html
@@ -24,8 +24,8 @@
 
               <div class="col-lg-9">
                   <div class="media">
-                  
-                  {%if no_pic %}
+                 
+                  {%if not profile.profilepicture %}
                   
                   <a class="pull-left" href="/moneyclub/member/profile">
                           <img class="media-object dp img-circle" src="/static/image/money.jpg" 
