--- a/moneyclub/templates/moneyclub/newsfeed.html
+++ b/moneyclub/templates/moneyclub/newsfeed.html
@@ -35,10 +35,16 @@
                
                 <div class="media-body">
                   
-                  <span class="label label-info">Article content:</span>
+                  <span class="label label-info">Article posted in :</span>
+                  <a href="/moneyclub/groups/home/{{article.groupId.id}}/">
+                  <span class="label label-danger">{{article.groupId.name|truncatechars:30}}
+                  
+                  {%if article.groupId.name.length > 30%}..{%endif%}</span>
+                  
+                  </a>
                   
                   <br/>
-                  {{article.content}}
+                  {{article.content|truncatechars:100}}..
                                     
                 </div><br/>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on {{article.datetime}}</p>
@@ -47,7 +53,7 @@
             
           </div><!--/row-->
           
-          <hr/>
+          
           </li>
           <hr/>
          
@@ -62,7 +68,13 @@
                 <div class="media-body">
                   
                   
-                  <span class="label label-info">Event</span>
+                  <span class="label label-info">Event posted in :</span>
+                  <a href="/moneyclub/groups/home/{{article.groupId.id}}/">
+                  <span class="label label-danger">{{article.groupId.name|truncatechars:30}}
+                  
+                  {%if article.groupId.name.length > 30%}..{%endif%}</span>
+                  
+                  </a>
                   <table class="table table-striped table-condensed">
                   
                   <tbody>
