Search results. Before findgroups

--- a/moneyclub/templates/moneyclub/newsfeed.html
+++ b/moneyclub/templates/moneyclub/newsfeed.html
@@ -20,7 +20,7 @@
               <div class="media">
               {%if article.picture%}
                   <a class="pull-left" href="#">
-                    <img class="media-object" 
+                    <img class="media-object dp" 
                     
                     
                     src="/moneyclub/groups/get_photo_article/{{article.id}}" 
