--- a/moneyclub/templates/moneyclub/group_home_page.html
+++ b/moneyclub/templates/moneyclub/group_home_page.html
@@ -28,8 +28,13 @@
                   <div class="media">
                     
                       <div class="pull-left" >
+                        {% if group.picture %}
                           <img id="ameyy" class="media-object dp img-circle" src="/moneyclub/groups/get_photo_group/{{group.id}}/" 
                           style="width: 100px;height:100px;">
+                        {% else %}
+                          <img id="ameyy" class="media-object dp img-circle" src="/static/image/money.jpg" 
+                          style="width: 100px;height:100px;">
+                        {% endif %}
                       </div>
 
                     
